# cati-database-feeder

./: .gitignore  README.md  add_q5010.py  add_q5011_2t.py  add_q5011_2t_w1.py  bulk.py  feeder.py  feeder_w6.py  list.txt  pyproject.toml
